<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/digite_nome"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNome"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/saldo_inicial"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_height="60dp"
            android:id="@+id/tela_add_spValores"
            android:layout_gravity="center">
        </Spinner>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_enviar"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/ufopcolor"
        android:textColor="@android:color/white"
        android:id="@+id/btEnvia"/>


</LinearLayout>