<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ola_fulano"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginRight="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvNome"
            android:gravity="center"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_fulano"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvSaldo"
            android:gravity="center"
            android:textSize="20dp"/>

    </LinearLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/almoco_jantar"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/ufopcolor"
        android:textColor="@android:color/white"
        android:id="@+id/btSaldo"/>

</LinearLayout>
